--- a/Project_ASP.NET/appsettings.json
+++ b/Project_ASP.NET/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnectionString": "Data Source=LAPTOP-T4FAIIK9;Initial Catalog=studio_application_db;Integrated Security=True;Pooling=False;TrustServerCertificate=True"
+
+  },
   "AllowedHosts": "*"
 }
