Create views, services

--- a/Project_ASP.NET/appsettings.json
+++ b/Project_ASP.NET/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnectionString": "Data Source=LAPTOP-T4FAIIK9;Initial Catalog=studio-app-db;Integrated Security=True;Pooling=False;TrustServerCertificate=True"
+    "DefaultConnectionString": "Data Source=LAPTOP-T4FAIIK9;Initial Catalog=studio-applic-db;Integrated Security=True;Pooling=False;TrustServerCertificate=True"
 
   },
   "AllowedHosts": "*"
