--- a/Project_ASP.NET/Properties/launchSettings.json
+++ b/Project_ASP.NET/Properties/launchSettings.json
@@ -12,6 +12,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
+      "launchUrl": "Reservations",
       "applicationUrl": "https://localhost:7147;http://localhost:5147",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
@@ -20,6 +21,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
+      "launchUrl": "Reservations",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
